package exercise.ex02.codes;

public abstract class CarComponent {

    public abstract int getPrice();

    public abstract String getCarInfo();

}
